--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     
-<meta name="dcmetromap/config/environment" content="%7B%22modulePrefix%22%3A%22dcmetromap%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22/dcmetromap/%22%2C%22locationType%22%3A%22hash%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%7D%2C%22APP%22%3A%7B%22name%22%3A%22dcmetromap%22%2C%22version%22%3A%220.0.0+d3223f22%22%7D%2C%22exportApplicationGlobal%22%3Afalse%7D" />
+<meta name="dcmetromap/config/environment" content="%7B%22modulePrefix%22%3A%22dcmetromap%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22/dcmetromap/%22%2C%22locationType%22%3A%22hash%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%7D%2C%22APP%22%3A%7B%22name%22%3A%22dcmetromap%22%2C%22version%22%3A%220.0.0+b15d6897%22%7D%2C%22exportApplicationGlobal%22%3Afalse%7D" />
 <link rel="manifest" href="/dcmetromap/manifest.webmanifest">
-<link rel="apple-touch-icon" href="/dcmetromap/assets/icons/appicon-192-a0ee1149962f24b8bd7c33147a3218e7.png" sizes="192">
-<link rel="apple-touch-icon" href="/dcmetromap/assets/icons/appicon-512-5ca0a0c8252aea168e0c85e9844a2669.png" sizes="512">
+<link rel="apple-touch-icon" href="/dcmetromap/assets/icons/appicon-192-a0ee1149962f24b8bd7c33147a3218e7.png" sizes="192x192">
+<link rel="apple-touch-icon" href="/dcmetromap/assets/icons/appicon-512-5ca0a0c8252aea168e0c85e9844a2669.png" sizes="512x512">
 <meta name="theme-color" content="#fff">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="dcmetromap">
@@ -26,7 +26,7 @@
     
 
     <script src="/dcmetromap/assets/vendor-0a312920b60cc303ffafa3f5e1806c7a.js"></script>
-    <script src="/dcmetromap/assets/dcmetromap-bffb5f640ce9f0c1aa46b1a4373041c8.js"></script>
+    <script src="/dcmetromap/assets/dcmetromap-e550f31d880a3ff7846f182b233984d2.js"></script>
 
     <script src="/dcmetromap/sw-registration.js"></script>
   </body>
