Deploy gh-pages from commit 79803c3b5c5b8e673b5ecdaba147f3ac0d16263e

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     
-<meta name="dcmetromap/config/environment" content="%7B%22modulePrefix%22%3A%22dcmetromap%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22/dcmetromap/%22%2C%22locationType%22%3A%22hash%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%7D%2C%22APP%22%3A%7B%22name%22%3A%22dcmetromap%22%2C%22version%22%3A%220.0.0+7b98ef26%22%7D%2C%22exportApplicationGlobal%22%3Afalse%7D" />
+<meta name="dcmetromap/config/environment" content="%7B%22modulePrefix%22%3A%22dcmetromap%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22/dcmetromap/%22%2C%22locationType%22%3A%22hash%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%7D%2C%22APP%22%3A%7B%22name%22%3A%22dcmetromap%22%2C%22version%22%3A%220.0.0+79803c3b%22%7D%2C%22exportApplicationGlobal%22%3Afalse%7D" />
 <link rel="manifest" href="/dcmetromap/manifest.webmanifest">
 <link rel="apple-touch-icon" href="/dcmetromap/assets/icons/appicon-280-902b4790610014c8ad13922b1d47eaf1.png" sizes="280x280">
 <link rel="apple-touch-icon" href="/dcmetromap/assets/icons/appicon-192-a0ee1149962f24b8bd7c33147a3218e7.png" sizes="192x192">
 <link rel="apple-touch-icon" href="/dcmetromap/assets/icons/appicon-512-5ca0a0c8252aea168e0c85e9844a2669.png" sizes="512x512">
 <link rel="icon" href="/dcmetromap/assets/icons/appicon-32-5ccfa0882e7ce99dc14203e43506fbb6.png" sizes="32x32">
+<link rel="icon" href="/dcmetromap/assets/icons/appicon-192-a0ee1149962f24b8bd7c33147a3218e7.png" sizes="192x192">
 <meta name="theme-color" content="#fff">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="dcmetromap">
@@ -28,7 +29,7 @@
     
 
     <script src="/dcmetromap/assets/vendor-0a312920b60cc303ffafa3f5e1806c7a.js"></script>
-    <script src="/dcmetromap/assets/dcmetromap-27c67797c14575f0f0e41bef07c01150.js"></script>
+    <script src="/dcmetromap/assets/dcmetromap-2136fea9a6f6082c344308f3dc8df479.js"></script>
 
     <script src="/dcmetromap/sw-registration.js"></script>
   </body>
